Sākta veikta reģistrēšanās iespējas uzstādīšana.

--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -18,7 +18,7 @@
             android:layout_height="100dp" />
 
         <EditText
-            android:id="@+id/editTextTextPersonName3"
+            android:id="@+id/textVards"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
@@ -27,7 +27,7 @@
             android:textSize="22sp" />
 
         <EditText
-            android:id="@+id/editTextTextPersonName4"
+            android:id="@+id/textUzvards"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
@@ -36,7 +36,7 @@
             android:textSize="22sp" />
 
         <EditText
-            android:id="@+id/editTextTextPersonName5"
+            android:id="@+id/tekstEpasts"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
@@ -55,7 +55,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="Valsts:"
-                android:textColor="#9A9A9A"
+                android:textColor="@color/material_dynamic_neutral30"
                 android:textSize="22sp" />
 
             <Spinner
@@ -80,11 +80,11 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:textAlignment="textEnd"
-                android:textColor="#FFFFFF"
+                android:textColor="@color/material_dynamic_neutral40"
                 android:textSize="22sp" />
 
             <EditText
-                android:id="@+id/editTextPhone2"
+                android:id="@+id/textPhone"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -94,12 +94,8 @@
                 android:textSize="22sp" />
         </LinearLayout>
 
-        <Space
-            android:layout_width="match_parent"
-            android:layout_height="20dp" />
-
         <EditText
-            android:id="@+id/editTextTextPersonName7"
+            android:id="@+id/textUsername"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
@@ -108,7 +104,7 @@
             android:textSize="22sp" />
 
         <EditText
-            android:id="@+id/editTextTextPassword"
+            android:id="@+id/textPassword1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
@@ -117,7 +113,7 @@
             android:textSize="22sp" />
 
         <EditText
-            android:id="@+id/editTextTextPassword2"
+            android:id="@+id/textPassword2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
@@ -125,11 +121,33 @@
             android:inputType="textPassword"
             android:textSize="22sp" />
 
-        <Button
-            android:id="@+id/button"
+        <Space
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Reģistrēties" />
+            android:layout_height="70dp" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+
+            <Space
+                android:layout_width="70dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="0" />
+
+            <Button
+                android:id="@+id/btnregistreties"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="100"
+                android:text="Reģistrēties"
+                android:textAlignment="center" />
+
+            <Space
+                android:layout_width="70dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="0" />
+        </LinearLayout>
 
     </LinearLayout>
 
