--- a/app/src/main/res/layout/item_view.xml
+++ b/app/src/main/res/layout/item_view.xml
@@ -15,7 +15,7 @@
         android:orientation="horizontal">
 
         <ImageView
-            android:id="@+id/imageview"
+            android:id="@+id/imageview_image"
             android:layout_width="200dp"
             android:layout_height="match_parent"
             android:layout_centerVertical="true"
@@ -31,7 +31,7 @@
                 android:id="@+id/kategorija"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_toEndOf="@+id/imageview"
+                android:layout_toEndOf="@+id/imageview_image"
                 android:textAlignment="center"
                 android:textColor="@color/black"
                 android:textSize="20dp"
@@ -42,7 +42,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/kategorija"
-                android:layout_toEndOf="@+id/imageview"
+                android:layout_toEndOf="@+id/imageview_image"
                 android:textAlignment="center"
                 android:textColor="@color/black"
                 android:textSize="20dp"
