--- a/app/src/main/res/layout/fragment_second.xml
+++ b/app/src/main/res/layout/fragment_second.xml
@@ -151,8 +151,9 @@
             android:layout_marginStart="40dp"
             android:layout_marginTop="20dp"
             android:layout_marginEnd="40dp"
-            android:isScrollContainer="false"
-            android:nestedScrollingEnabled="false"
+            android:nestedScrollingEnabled="true"
+            android:overScrollMode="ifContentScrolls"
+            android:persistentDrawingCache="scrolling"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHeight_max="wrap"
             app:layout_constraintStart_toStartOf="parent"
